<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/backimg1">

    <TextView
        android:id="@+id/txMyCart"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="552dp"
        android:background="#64FFDA"
        android:text="@string/txMyCart"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="138dp"
        android:layout_height="160dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="251dp"
        android:layout_marginBottom="344dp"
        app:srcCompat="@drawable/caki" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="148dp"
        android:layout_height="150dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="239dp"
        android:layout_marginBottom="168dp"
        app:srcCompat="@drawable/caki" />

    <TextView
        android:id="@+id/txMyCart1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="472dp"
        android:text="@string/txMyCart1"
        android:textColor="#0C0C0C"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnRemove"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="359dp"
        android:background="@drawable/button_round"
        android:text="@string/btnRemove"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" /><![CDATA[





    />







    ]]>

    <Button
        android:id="@+id/btnRemove3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="170dp"
        android:background="@drawable/button_round"
        android:text="@string/btnRemove2"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txMyCart3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="291dp"
        android:text="@string/txMyCart2"
        android:textColor="#0B0A0A"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="414dp"
        android:clickable="true"
        app:srcCompat="@android:drawable/presence_busy" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="411dp"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_input_add" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="227dp"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_input_add" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="226dp"
        android:clickable="true"
        app:srcCompat="@android:drawable/presence_busy" />
</RelativeLayout>