<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Second"
    android:background="@drawable/backimg1">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="151dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-5dp"
        android:layout_marginBottom="337dp"
        app:srcCompat="@drawable/caki" />

    <TextView
        android:id="@+id/txSecond1"
        android:layout_width="325dp"
        android:layout_height="92dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="496dp"
        android:text="@string/txSecond1"
        android:textAlignment="center"
        android:textColor="#1D309A"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="401dp"
        android:layout_height="83dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="242dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="choco cake ...1kg....1500RS....Birthday cake"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="235dp"
        android:layout_marginBottom="180dp"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_input_add" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="179dp"
        android:clickable="true"
        app:srcCompat="@android:drawable/presence_busy" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="211dp"
        android:layout_marginBottom="197dp"
        android:text="1"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Secondbtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="272dp"
        android:layout_marginBottom="114dp"
        android:background="@drawable/button_round"
        android:text="@string/Secondbtn1"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/Secondbtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="114dp"
        android:text="@string/Secondbtn2"
        android:background="@drawable/button_round"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"/>

</RelativeLayout>